extension lifecycle contract